fixed views directory

--- a/views/email.jade
+++ b/views/email.jade
@@ -1,3 +1,7 @@
+//Local variables are precisely those POSTed to /dailyDrinkReport
+//#{email}
+//...
+
 !!! 5
 html(lang="en")
   head
@@ -5,4 +9,4 @@ html(lang="en")
   body
     h1 Wow, what a night!
     ul
-      li Hello!
+      li your email: #{email}
