--- a/views/email.jade
+++ b/views/email.jade
@@ -1,6 +1,8 @@
-//Local variables are precisely those POSTed to /dailyDrinkReport
-//#{email}
-//...
+-//Local variables are precisely those POSTed to /dailyDrinkReport
+-//#{report}
+-//...
+
+-drinkCount = report.length;
 
 !!! 5
 html(lang="en")
@@ -8,5 +10,7 @@ html(lang="en")
     title Goonbuggy Drinking Report
   body
     h1 Wow, what a night!
-    ul
-      li your email: #{email}
+    p Hi there! You had #{drinkCount} drinks:
+    ol
+      each drink in report
+        li #{drink.timeFormat}: #{drink.desc} at #{drink.geo.lat}, #{drink.geo.long}
